syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "money.proto";
import "internal.proto";

// WithdrawService is the service managing the withdraw access.
service WithdrawService {
    // Get data for current withdraw fee
    rpc GetWithdrawFee (GetWithdrawFeeRequest) returns (GetWithdrawFeeResponse) {
        option (google.api.http) = {
			get: "/api/withdraw/{money_abbr}/withdrawfee"
		};
    }

    rpc WithdrawReq (WithdrawReqRequest) returns (WithdrawReqResponse) {
        option (google.api.http) = {
			post: "/api/withdraw/{money_abbr}"
			body: "*"
		};
    }

    rpc GetWithdrawHistory (GetWithdrawHistoryRequest) returns (GetWithdrawHistoryResponse) {
        option (google.api.http) = {
			get: "/api/withdraw/{money_abbr}/history"
		};
    }

    rpc ModifyWithdrawFee (ModifyWithdrawFeeRequest) returns (ModifyWithdrawFeeResponse) {
        option(google.api.http) = {
			put: "/api/withdraw/{money_abbr}/withdrawfee"
			body: "*"
		};
    }
}

message GetWithdrawFeeRequest {
    // type of crypto currency
    Money money_abbr = 1;
}

message GetWithdrawFeeResponse {
    // Withdraw object.
    double withdrawFee = 1;
    string error = 2;
    ProfileResponse user_profile = 3;
}

message WithdrawReqRequest {
    int64 org_id = 1;
    Money money_abbr = 2;
    double amount = 3;
}

message WithdrawReqResponse {
    bool status = 1;
    string error = 2;
    ProfileResponse user_profile = 3;
}

message GetWithdrawHistoryRequest {
    string org_id = 1;
    string offset = 2;
    int64 limit = 3;
    Money money_abbr = 4;
}

message WithdrawHistory {
    string from = 1;
    string to = 2;
    string money_type = 3;
    double amount = 4;
    string created_at = 5;
}

message GetWithdrawHistoryResponse {
    string error = 1;
    int64 count = 2;
    repeated WithdrawHistory withdraw_history = 3;
    ProfileResponse user_profile = 4;
}

message ModifyWithdrawFeeRequest {
    Money money_abbr = 1;
    double withdraw_fee = 2;
}

message ModifyWithdrawFeeResponse {
    bool status = 1;
    string error = 2;
    ProfileResponse user_profile = 3;
}